--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm ci"
+  command = "# no build command"
   functions = "netlify/functions"
 
 [functions]
